lab2/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_or_empty
Rule 2     instructions_or_empty -> <empty>
Rule 3     instructions_or_empty -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> print_i ;
Rule 8     instruction -> assign ;
Rule 9     instruction -> while_l
Rule 10    instruction -> for_l
Rule 11    instruction -> CONTINUE ;
Rule 12    instruction -> BREAK ;
Rule 13    instruction -> return_i ;
Rule 14    instruction -> if_i
Rule 15    if_i -> IF ( expr ) instruction ELSE error
Rule 16    if_i -> IF ( expr ) error ELSE instruction  [precedence=right, level=2]
Rule 17    if_i -> IF ( expr ) error  [precedence=right, level=1]
Rule 18    if_i -> IF ( error ) instruction ELSE instruction  [precedence=right, level=2]
Rule 19    if_i -> IF ( error ) instruction  [precedence=right, level=1]
Rule 20    if_i -> IF ( expr ) instruction ELSE instruction  [precedence=right, level=2]
Rule 21    if_i -> IF ( expr ) instruction  [precedence=right, level=1]
Rule 22    while_l -> WHILE ( expr ) error
Rule 23    while_l -> WHILE ( error ) instruction
Rule 24    while_l -> WHILE ( expr ) instruction
Rule 25    for_l -> FOR ID = expr : expr error
Rule 26    for_l -> FOR ID = expr : error instruction
Rule 27    for_l -> FOR ID = error : expr instruction
Rule 28    for_l -> FOR ID = expr : expr instruction
Rule 29    return_i -> RETURN error
Rule 30    return_i -> RETURN expr
Rule 31    return_i -> RETURN
Rule 32    print_i -> PRINT error
Rule 33    print_i -> PRINT printargs
Rule 34    printargs -> expr
Rule 35    printargs -> expr , printargs
Rule 36    expr -> mat_fun ( error )
Rule 37    expr -> mat_fun ( expr )
Rule 38    expr -> matrix
Rule 39    expr -> expr DOTMINUS expr  [precedence=left, level=6]
Rule 40    expr -> expr DOTPLUS expr  [precedence=left, level=6]
Rule 41    expr -> expr DOTDIVIDE expr  [precedence=left, level=7]
Rule 42    expr -> expr DOTMULTIPLY expr  [precedence=left, level=7]
Rule 43    expr -> expr OR expr  [precedence=left, level=3]
Rule 44    expr -> expr AND expr  [precedence=left, level=3]
Rule 45    expr -> expr XOR expr  [precedence=left, level=3]
Rule 46    expr -> expr GTE expr  [precedence=nonassoc, level=8]
Rule 47    expr -> expr LTE expr  [precedence=nonassoc, level=8]
Rule 48    expr -> expr GT expr  [precedence=nonassoc, level=8]
Rule 49    expr -> expr LT expr  [precedence=nonassoc, level=8]
Rule 50    expr -> expr NEQ expr  [precedence=nonassoc, level=8]
Rule 51    expr -> expr EQ expr  [precedence=nonassoc, level=8]
Rule 52    expr -> expr / expr  [precedence=left, level=5]
Rule 53    expr -> expr * expr  [precedence=left, level=5]
Rule 54    expr -> expr - expr  [precedence=left, level=4]
Rule 55    expr -> expr + expr  [precedence=left, level=4]
Rule 56    expr -> expr '
Rule 57    expr -> NOT expr  [precedence=right, level=9]
Rule 58    expr -> - expr  [precedence=right, level=9]
Rule 59    expr -> STRING
Rule 60    expr -> FLOATNUM
Rule 61    expr -> INTNUM
Rule 62    expr -> ( expr )
Rule 63    expr -> var
Rule 64    var -> matel
Rule 65    var -> ID
Rule 66    matel -> ID [ expr , expr ]
Rule 67    assign -> var DIVIDEASSIGN error
Rule 68    assign -> var MULTIPLYASSIGN error
Rule 69    assign -> var MINUSASSIGN error
Rule 70    assign -> var PLUSASSIGN error
Rule 71    assign -> var = error
Rule 72    assign -> var DIVIDEASSIGN expr
Rule 73    assign -> var MULTIPLYASSIGN expr
Rule 74    assign -> var MINUSASSIGN expr
Rule 75    assign -> var PLUSASSIGN expr
Rule 76    assign -> var = expr
Rule 77    matrix -> [ vectors ]
Rule 78    vectors -> vector
Rule 79    vectors -> vectors , vector
Rule 80    vector -> [ variables ]
Rule 81    variables -> variable
Rule 82    variables -> variables , variable
Rule 83    variable -> expr
Rule 84    mat_fun -> ONES
Rule 85    mat_fun -> EYE
Rule 86    mat_fun -> ZEROS

Terminals, with rules where they appear:

'                    : 56
(                    : 15 16 17 18 19 20 21 22 23 24 36 37 62
)                    : 15 16 17 18 19 20 21 22 23 24 36 37 62
*                    : 53
+                    : 55
,                    : 35 66 79 82
-                    : 54 58
/                    : 52
:                    : 25 26 27 28
;                    : 7 8 11 12 13
=                    : 25 26 27 28 71 76
AND                  : 44
BREAK                : 12
CONTINUE             : 11
DIVIDEASSIGN         : 67 72
DOTDIVIDE            : 41
DOTMINUS             : 39
DOTMULTIPLY          : 42
DOTPLUS              : 40
ELSE                 : 15 16 18 20
EQ                   : 51
EYE                  : 85
FLOATNUM             : 60
FOR                  : 25 26 27 28
GT                   : 48
GTE                  : 46
ID                   : 25 26 27 28 65 66
IF                   : 15 16 17 18 19 20 21
INTNUM               : 61
LT                   : 49
LTE                  : 47
MINUSASSIGN          : 69 74
MULTIPLYASSIGN       : 68 73
NEQ                  : 50
NOT                  : 57
ONES                 : 84
OR                   : 43
PLUSASSIGN           : 70 75
PRINT                : 32 33
RETURN               : 29 30 31
STRING               : 59
WHILE                : 22 23 24
XOR                  : 45
ZEROS                : 86
[                    : 66 77 80
]                    : 66 77 80
error                : 15 16 17 18 19 22 23 25 26 27 29 32 36 67 68 69 70 71
{                    : 6
}                    : 6

Nonterminals, with rules where they appear:

assign               : 8
expr                 : 15 16 17 20 21 22 24 25 25 26 27 28 28 30 34 35 37 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 57 58 62 66 66 72 73 74 75 76 83
for_l                : 10
if_i                 : 14
instruction          : 4 5 15 16 18 18 19 20 20 21 23 24 26 27 28
instructions         : 3 5 6
instructions_or_empty : 1
mat_fun              : 36 37
matel                : 64
matrix               : 38
print_i              : 7
printargs            : 33 35
program              : 0
return_i             : 13
var                  : 63 67 68 69 70 71 72 73 74 75 76
variable             : 81 82
variables            : 80 82
vector               : 78 79
vectors              : 77 79
while_l              : 9


state 0

    (0) S' -> . program
    (1) program -> . instructions_or_empty
    (2) instructions_or_empty -> .
    (3) instructions_or_empty -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (32) print_i -> . PRINT error
    (33) print_i -> . PRINT printargs
    (67) assign -> . var DIVIDEASSIGN error
    (68) assign -> . var MULTIPLYASSIGN error
    (69) assign -> . var MINUSASSIGN error
    (70) assign -> . var PLUSASSIGN error
    (71) assign -> . var = error
    (72) assign -> . var DIVIDEASSIGN expr
    (73) assign -> . var MULTIPLYASSIGN expr
    (74) assign -> . var MINUSASSIGN expr
    (75) assign -> . var PLUSASSIGN expr
    (76) assign -> . var = expr
    (22) while_l -> . WHILE ( expr ) error
    (23) while_l -> . WHILE ( error ) instruction
    (24) while_l -> . WHILE ( expr ) instruction
    (25) for_l -> . FOR ID = expr : expr error
    (26) for_l -> . FOR ID = expr : error instruction
    (27) for_l -> . FOR ID = error : expr instruction
    (28) for_l -> . FOR ID = expr : expr instruction
    (29) return_i -> . RETURN error
    (30) return_i -> . RETURN expr
    (31) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE error
    (16) if_i -> . IF ( expr ) error ELSE instruction
    (17) if_i -> . IF ( expr ) error
    (18) if_i -> . IF ( error ) instruction ELSE instruction
    (19) if_i -> . IF ( error ) instruction
    (20) if_i -> . IF ( expr ) instruction ELSE instruction
    (21) if_i -> . IF ( expr ) instruction
    (64) var -> . matel
    (65) var -> . ID
    (66) matel -> . ID [ expr , expr ]
    $end            reduce using rule 2 (instructions_or_empty -> .)
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    program                        shift and go to state 1
    instructions_or_empty          shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_or_empty .
    $end            reduce using rule 1 (program -> instructions_or_empty .)


state 3

    (3) instructions_or_empty -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (32) print_i -> . PRINT error
    (33) print_i -> . PRINT printargs
    (67) assign -> . var DIVIDEASSIGN error
    (68) assign -> . var MULTIPLYASSIGN error
    (69) assign -> . var MINUSASSIGN error
    (70) assign -> . var PLUSASSIGN error
    (71) assign -> . var = error
    (72) assign -> . var DIVIDEASSIGN expr
    (73) assign -> . var MULTIPLYASSIGN expr
    (74) assign -> . var MINUSASSIGN expr
    (75) assign -> . var PLUSASSIGN expr
    (76) assign -> . var = expr
    (22) while_l -> . WHILE ( expr ) error
    (23) while_l -> . WHILE ( error ) instruction
    (24) while_l -> . WHILE ( expr ) instruction
    (25) for_l -> . FOR ID = expr : expr error
    (26) for_l -> . FOR ID = expr : error instruction
    (27) for_l -> . FOR ID = error : expr instruction
    (28) for_l -> . FOR ID = expr : expr instruction
    (29) return_i -> . RETURN error
    (30) return_i -> . RETURN expr
    (31) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE error
    (16) if_i -> . IF ( expr ) error ELSE instruction
    (17) if_i -> . IF ( expr ) error
    (18) if_i -> . IF ( error ) instruction ELSE instruction
    (19) if_i -> . IF ( error ) instruction
    (20) if_i -> . IF ( expr ) instruction ELSE instruction
    (21) if_i -> . IF ( expr ) instruction
    (64) var -> . matel
    (65) var -> . ID
    (66) matel -> . ID [ expr , expr ]
    $end            reduce using rule 3 (instructions_or_empty -> instructions .)
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instruction                    shift and go to state 22
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 4

    (4) instructions -> instruction .
    {               reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (32) print_i -> . PRINT error
    (33) print_i -> . PRINT printargs
    (67) assign -> . var DIVIDEASSIGN error
    (68) assign -> . var MULTIPLYASSIGN error
    (69) assign -> . var MINUSASSIGN error
    (70) assign -> . var PLUSASSIGN error
    (71) assign -> . var = error
    (72) assign -> . var DIVIDEASSIGN expr
    (73) assign -> . var MULTIPLYASSIGN expr
    (74) assign -> . var MINUSASSIGN expr
    (75) assign -> . var PLUSASSIGN expr
    (76) assign -> . var = expr
    (22) while_l -> . WHILE ( expr ) error
    (23) while_l -> . WHILE ( error ) instruction
    (24) while_l -> . WHILE ( expr ) instruction
    (25) for_l -> . FOR ID = expr : expr error
    (26) for_l -> . FOR ID = expr : error instruction
    (27) for_l -> . FOR ID = error : expr instruction
    (28) for_l -> . FOR ID = expr : expr instruction
    (29) return_i -> . RETURN error
    (30) return_i -> . RETURN expr
    (31) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE error
    (16) if_i -> . IF ( expr ) error ELSE instruction
    (17) if_i -> . IF ( expr ) error
    (18) if_i -> . IF ( error ) instruction ELSE instruction
    (19) if_i -> . IF ( error ) instruction
    (20) if_i -> . IF ( expr ) instruction ELSE instruction
    (21) if_i -> . IF ( expr ) instruction
    (64) var -> . matel
    (65) var -> . ID
    (66) matel -> . ID [ expr , expr ]
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instructions                   shift and go to state 23
    instruction                    shift and go to state 4
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 6

    (7) instruction -> print_i . ;
    ;               shift and go to state 24


state 7

    (8) instruction -> assign . ;
    ;               shift and go to state 25


state 8

    (9) instruction -> while_l .
    {               reduce using rule 9 (instruction -> while_l .)
    CONTINUE        reduce using rule 9 (instruction -> while_l .)
    BREAK           reduce using rule 9 (instruction -> while_l .)
    PRINT           reduce using rule 9 (instruction -> while_l .)
    WHILE           reduce using rule 9 (instruction -> while_l .)
    FOR             reduce using rule 9 (instruction -> while_l .)
    RETURN          reduce using rule 9 (instruction -> while_l .)
    IF              reduce using rule 9 (instruction -> while_l .)
    ID              reduce using rule 9 (instruction -> while_l .)
    $end            reduce using rule 9 (instruction -> while_l .)
    }               reduce using rule 9 (instruction -> while_l .)
    ELSE            reduce using rule 9 (instruction -> while_l .)


state 9

    (10) instruction -> for_l .
    {               reduce using rule 10 (instruction -> for_l .)
    CONTINUE        reduce using rule 10 (instruction -> for_l .)
    BREAK           reduce using rule 10 (instruction -> for_l .)
    PRINT           reduce using rule 10 (instruction -> for_l .)
    WHILE           reduce using rule 10 (instruction -> for_l .)
    FOR             reduce using rule 10 (instruction -> for_l .)
    RETURN          reduce using rule 10 (instruction -> for_l .)
    IF              reduce using rule 10 (instruction -> for_l .)
    ID              reduce using rule 10 (instruction -> for_l .)
    $end            reduce using rule 10 (instruction -> for_l .)
    }               reduce using rule 10 (instruction -> for_l .)
    ELSE            reduce using rule 10 (instruction -> for_l .)


state 10

    (11) instruction -> CONTINUE . ;
    ;               shift and go to state 26


state 11

    (12) instruction -> BREAK . ;
    ;               shift and go to state 27


state 12

    (13) instruction -> return_i . ;
    ;               shift and go to state 28


state 13

    (14) instruction -> if_i .
    {               reduce using rule 14 (instruction -> if_i .)
    CONTINUE        reduce using rule 14 (instruction -> if_i .)
    BREAK           reduce using rule 14 (instruction -> if_i .)
    PRINT           reduce using rule 14 (instruction -> if_i .)
    WHILE           reduce using rule 14 (instruction -> if_i .)
    FOR             reduce using rule 14 (instruction -> if_i .)
    RETURN          reduce using rule 14 (instruction -> if_i .)
    IF              reduce using rule 14 (instruction -> if_i .)
    ID              reduce using rule 14 (instruction -> if_i .)
    $end            reduce using rule 14 (instruction -> if_i .)
    }               reduce using rule 14 (instruction -> if_i .)
    ELSE            reduce using rule 14 (instruction -> if_i .)


state 14

    (32) print_i -> PRINT . error
    (33) print_i -> PRINT . printargs
    (34) printargs -> . expr
    (35) printargs -> . expr , printargs
    (36) expr -> . mat_fun ( error )
    (37) expr -> . mat_fun ( expr )
    (38) expr -> . matrix
    (39) expr -> . expr DOTMINUS expr
    (40) expr -> . expr DOTPLUS expr
    (41) expr -> . expr DOTDIVIDE expr
    (42) expr -> . expr DOTMULTIPLY expr
    (43) expr -> . expr OR expr
    (44) expr -> . expr AND expr
    (45) expr -> . expr XOR expr
    (46) expr -> . expr GTE expr
    (47) expr -> . expr LTE expr
    (48) expr -> . expr GT expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr / expr
    (53) expr -> . expr * expr
    (54) expr -> . expr - expr
    (55) expr -> . expr + expr
    (56) expr -> . expr '
    (57) expr -> . NOT expr
    (58) expr -> . - expr
    (59) expr -> . STRING
    (60) expr -> . FLOATNUM
    (61) expr -> . INTNUM
    (62) expr -> . ( expr )
    (63) expr -> . var
    (84) mat_fun -> . ONES
    (85) mat_fun -> . EYE
    (86) mat_fun -> . ZEROS
    (77) matrix -> . [ vectors ]
    (64) var -> . matel
    (65) var -> . ID
    (66) matel -> . ID [ expr , expr ]
    error           shift and go to state 29
    NOT             shift and go to state 36
    -               shift and go to state 35
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    (               shift and go to state 33
    ONES            shift and go to state 41
    EYE             shift and go to state 42
    ZEROS           shift and go to state 43
    [               shift and go to state 44
    ID              shift and go to state 18

    printargs                      shift and go to state 30
    expr                           shift and go to state 31
    mat_fun                        shift and go to state 32
    matrix                         shift and go to state 34
    var                            shift and go to state 40
    matel                          shift and go to state 21

state 15

    (67) assign -> var . DIVIDEASSIGN error
    (68) assign -> var . MULTIPLYASSIGN error
    (69) assign -> var . MINUSASSIGN error
    (70) assign -> var . PLUSASSIGN error
    (71) assign -> var . = error
    (72) assign -> var . DIVIDEASSIGN expr
    (73) assign -> var . MULTIPLYASSIGN expr
    (74) assign -> var . MINUSASSIGN expr
    (75) assign -> var . PLUSASSIGN expr
    (76) assign -> var . = expr
    DIVIDEASSIGN    shift and go to state 45
    MULTIPLYASSIGN  shift and go to state 46
    MINUSASSIGN     shift and go to state 47
    PLUSASSIGN      shift and go to state 48
    =               shift and go to state 49


state 16

    (22) while_l -> WHILE . ( expr ) error
    (23) while_l -> WHILE . ( error ) instruction
    (24) while_l -> WHILE . ( expr ) instruction
    (               shift and go to state 50


state 17

    (25) for_l -> FOR . ID = expr : expr error
    (26) for_l -> FOR . ID = expr : error instruction
    (27) for_l -> FOR . ID = error : expr instruction
    (28) for_l -> FOR . ID = expr : expr instruction
    ID              shift and go to state 51


state 18

    (65) var -> ID .
    (66) matel -> ID . [ expr , expr ]
    DIVIDEASSIGN    reduce using rule 65 (var -> ID .)
    MULTIPLYASSIGN  reduce using rule 65 (var -> ID .)
    MINUSASSIGN     reduce using rule 65 (var -> ID .)
    PLUSASSIGN      reduce using rule 65 (var -> ID .)
    =               reduce using rule 65 (var -> ID .)
    ,               reduce using rule 65 (var -> ID .)
    DOTMINUS        reduce using rule 65 (var -> ID .)
    DOTPLUS         reduce using rule 65 (var -> ID .)
    DOTDIVIDE       reduce using rule 65 (var -> ID .)
    DOTMULTIPLY     reduce using rule 65 (var -> ID .)
    OR              reduce using rule 65 (var -> ID .)
    AND             reduce using rule 65 (var -> ID .)
    XOR             reduce using rule 65 (var -> ID .)
    GTE             reduce using rule 65 (var -> ID .)
    LTE             reduce using rule 65 (var -> ID .)
    GT              reduce using rule 65 (var -> ID .)
    LT              reduce using rule 65 (var -> ID .)
    NEQ             reduce using rule 65 (var -> ID .)
    EQ              reduce using rule 65 (var -> ID .)
    /               reduce using rule 65 (var -> ID .)
    *               reduce using rule 65 (var -> ID .)
    -               reduce using rule 65 (var -> ID .)
    +               reduce using rule 65 (var -> ID .)
    '               reduce using rule 65 (var -> ID .)
    ;               reduce using rule 65 (var -> ID .)
    )               reduce using rule 65 (var -> ID .)
    ]               reduce using rule 65 (var -> ID .)
    :               reduce using rule 65 (var -> ID .)
    error           reduce using rule 65 (var -> ID .)
    {               reduce using rule 65 (var -> ID .)
    CONTINUE        reduce using rule 65 (var -> ID .)
    BREAK           reduce using rule 65 (var -> ID .)
    PRINT           reduce using rule 65 (var -> ID .)
    WHILE           reduce using rule 65 (var -> ID .)
    FOR             reduce using rule 65 (var -> ID .)
    RETURN          reduce using rule 65 (var -> ID .)
    IF              reduce using rule 65 (var -> ID .)
    ID              reduce using rule 65 (var -> ID .)
    [               shift and go to state 52


state 19

    (29) return_i -> RETURN . error
    (30) return_i -> RETURN . expr
    (31) return_i -> RETURN .
    (36) expr -> . mat_fun ( error )
    (37) expr -> . mat_fun ( expr )
    (38) expr -> . matrix
    (39) expr -> . expr DOTMINUS expr
    (40) expr -> . expr DOTPLUS expr
    (41) expr -> . expr DOTDIVIDE expr
    (42) expr -> . expr DOTMULTIPLY expr
    (43) expr -> . expr OR expr
    (44) expr -> . expr AND expr
    (45) expr -> . expr XOR expr
    (46) expr -> . expr GTE expr
    (47) expr -> . expr LTE expr
    (48) expr -> . expr GT expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr / expr
    (53) expr -> . expr * expr
    (54) expr -> . expr - expr
    (55) expr -> . expr + expr
    (56) expr -> . expr '
    (57) expr -> . NOT expr
    (58) expr -> . - expr
    (59) expr -> . STRING
    (60) expr -> . FLOATNUM
    (61) expr -> . INTNUM
    (62) expr -> . ( expr )
    (63) expr -> . var
    (84) mat_fun -> . ONES
    (85) mat_fun -> . EYE
    (86) mat_fun -> . ZEROS
    (77) matrix -> . [ vectors ]
    (64) var -> . matel
    (65) var -> . ID
    (66) matel -> . ID [ expr , expr ]
    error           shift and go to state 53
    ;               reduce using rule 31 (return_i -> RETURN .)
    NOT             shift and go to state 36
    -               shift and go to state 35
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    (               shift and go to state 33
    ONES            shift and go to state 41
    EYE             shift and go to state 42
    ZEROS           shift and go to state 43
    [               shift and go to state 44
    ID              shift and go to state 18

    expr                           shift and go to state 54
    mat_fun                        shift and go to state 32
    matrix                         shift and go to state 34
    var                            shift and go to state 40
    matel                          shift and go to state 21

state 20

    (15) if_i -> IF . ( expr ) instruction ELSE error
    (16) if_i -> IF . ( expr ) error ELSE instruction
    (17) if_i -> IF . ( expr ) error
    (18) if_i -> IF . ( error ) instruction ELSE instruction
    (19) if_i -> IF . ( error ) instruction
    (20) if_i -> IF . ( expr ) instruction ELSE instruction
    (21) if_i -> IF . ( expr ) instruction
    (               shift and go to state 55


state 21

    (64) var -> matel .
    DIVIDEASSIGN    reduce using rule 64 (var -> matel .)
    MULTIPLYASSIGN  reduce using rule 64 (var -> matel .)
    MINUSASSIGN     reduce using rule 64 (var -> matel .)
    PLUSASSIGN      reduce using rule 64 (var -> matel .)
    =               reduce using rule 64 (var -> matel .)
    ,               reduce using rule 64 (var -> matel .)
    DOTMINUS        reduce using rule 64 (var -> matel .)
    DOTPLUS         reduce using rule 64 (var -> matel .)
    DOTDIVIDE       reduce using rule 64 (var -> matel .)
    DOTMULTIPLY     reduce using rule 64 (var -> matel .)
    OR              reduce using rule 64 (var -> matel .)
    AND             reduce using rule 64 (var -> matel .)
    XOR             reduce using rule 64 (var -> matel .)
    GTE             reduce using rule 64 (var -> matel .)
    LTE             reduce using rule 64 (var -> matel .)
    GT              reduce using rule 64 (var -> matel .)
    LT              reduce using rule 64 (var -> matel .)
    NEQ             reduce using rule 64 (var -> matel .)
    EQ              reduce using rule 64 (var -> matel .)
    /               reduce using rule 64 (var -> matel .)
    *               reduce using rule 64 (var -> matel .)
    -               reduce using rule 64 (var -> matel .)
    +               reduce using rule 64 (var -> matel .)
    '               reduce using rule 64 (var -> matel .)
    ;               reduce using rule 64 (var -> matel .)
    )               reduce using rule 64 (var -> matel .)
    ]               reduce using rule 64 (var -> matel .)
    :               reduce using rule 64 (var -> matel .)
    error           reduce using rule 64 (var -> matel .)
    {               reduce using rule 64 (var -> matel .)
    CONTINUE        reduce using rule 64 (var -> matel .)
    BREAK           reduce using rule 64 (var -> matel .)
    PRINT           reduce using rule 64 (var -> matel .)
    WHILE           reduce using rule 64 (var -> matel .)
    FOR             reduce using rule 64 (var -> matel .)
    RETURN          reduce using rule 64 (var -> matel .)
    IF              reduce using rule 64 (var -> matel .)
    ID              reduce using rule 64 (var -> matel .)


state 22

    (5) instructions -> instructions instruction .
    {               reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 23

    (6) instruction -> { instructions . }
    (5) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (32) print_i -> . PRINT error
    (33) print_i -> . PRINT printargs
    (67) assign -> . var DIVIDEASSIGN error
    (68) assign -> . var MULTIPLYASSIGN error
    (69) assign -> . var MINUSASSIGN error
    (70) assign -> . var PLUSASSIGN error
    (71) assign -> . var = error
    (72) assign -> . var DIVIDEASSIGN expr
    (73) assign -> . var MULTIPLYASSIGN expr
    (74) assign -> . var MINUSASSIGN expr
    (75) assign -> . var PLUSASSIGN expr
    (76) assign -> . var = expr
    (22) while_l -> . WHILE ( expr ) error
    (23) while_l -> . WHILE ( error ) instruction
    (24) while_l -> . WHILE ( expr ) instruction
    (25) for_l -> . FOR ID = expr : expr error
    (26) for_l -> . FOR ID = expr : error instruction
    (27) for_l -> . FOR ID = error : expr instruction
    (28) for_l -> . FOR ID = expr : expr instruction
    (29) return_i -> . RETURN error
    (30) return_i -> . RETURN expr
    (31) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE error
    (16) if_i -> . IF ( expr ) error ELSE instruction
    (17) if_i -> . IF ( expr ) error
    (18) if_i -> . IF ( error ) instruction ELSE instruction
    (19) if_i -> . IF ( error ) instruction
    (20) if_i -> . IF ( expr ) instruction ELSE instruction
    (21) if_i -> . IF ( expr ) instruction
    (64) var -> . matel
    (65) var -> . ID
    (66) matel -> . ID [ expr , expr ]
    }               shift and go to state 56
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instruction                    shift and go to state 22
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 24

    (7) instruction -> print_i ; .
    {               reduce using rule 7 (instruction -> print_i ; .)
    CONTINUE        reduce using rule 7 (instruction -> print_i ; .)
    BREAK           reduce using rule 7 (instruction -> print_i ; .)
    PRINT           reduce using rule 7 (instruction -> print_i ; .)
    WHILE           reduce using rule 7 (instruction -> print_i ; .)
    FOR             reduce using rule 7 (instruction -> print_i ; .)
    RETURN          reduce using rule 7 (instruction -> print_i ; .)
    IF              reduce using rule 7 (instruction -> print_i ; .)
    ID              reduce using rule 7 (instruction -> print_i ; .)
    $end            reduce using rule 7 (instruction -> print_i ; .)
    }               reduce using rule 7 (instruction -> print_i ; .)
    ELSE            reduce using rule 7 (instruction -> print_i ; .)


state 25

    (8) instruction -> assign ; .
    {               reduce using rule 8 (instruction -> assign ; .)
    CONTINUE        reduce using rule 8 (instruction -> assign ; .)
    BREAK           reduce using rule 8 (instruction -> assign ; .)
    PRINT           reduce using rule 8 (instruction -> assign ; .)
    WHILE           reduce using rule 8 (instruction -> assign ; .)
    FOR             reduce using rule 8 (instruction -> assign ; .)
    RETURN          reduce using rule 8 (instruction -> assign ; .)
    IF              reduce using rule 8 (instruction -> assign ; .)
    ID              reduce using rule 8 (instruction -> assign ; .)
    $end            reduce using rule 8 (instruction -> assign ; .)
    }               reduce using rule 8 (instruction -> assign ; .)
    ELSE            reduce using rule 8 (instruction -> assign ; .)


state 26
